| Summary: | ASTERISK-28218: app_queue: Asterisk crashes when using Queue with a pre-dial handler (option b) | ||
| Reporter: | Mark (mwoop) | Labels: | patch |
| Date Opened: | 2018-12-21 05:50:28.000-0600 | Date Closed: | 2019-01-02 16:39:21.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 16.0.1 16.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ASTERISK-26218.diff ( 1) brief.txt ( 2) full.txt ( 3) locks.txt ( 4) thread1.txt | |
| Description: | I am trying to add custom SIP headers in a pre-dial handler.
Option b, which is working great for app Dial, is available for app Queue in Asterisk 16. Unfortunately Asterisk is crashing as soon as a call is transferred. Setup: Queues and users in realtime database Dialplan: {noformat} exten => _X.,n,Queue(${queueid},b(addheaders^s^1)) [addheaders] exten => s,1,NoOp(Adding custom headers to queue call) exten => s,n,SipAddHeader(X-Queue-ID: ${queueid}) exten => s,n,SipAddHeader(X-Queue-Name: ${queuename}) exten => s,n,Return {noformat} Result: Asterisk crashes with segmentation fault. No call is placed to the user. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-12-21 05:50:30.895-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Asterisk Team (asteriskteam) 2018-12-21 05:50:32.051-0600 The severity of this issue has been automatically downgraded from "Blocker" to "Major". The "Blocker" severity is reserved for issues which have been determined to block the next release of Asterisk. This severity can only be set by privileged users. If this issue is deemed to block the next release it will be updated accordingly during the triage process. By: Joshua C. Colp (jcolp) 2018-12-21 06:52:46.843-0600 Thank you for the crash report. However, we need more information to investigate the crash. Please provide: 1. A backtrace generated from a core dump using the instructions provided on the Asterisk wiki [1]. 2. Specific steps taken that lead to the crash. 3. All configuration information necesary to reproduce the crash. Thanks! [1]: https://wiki.asterisk.org/wiki/display/AST/Getting+a+Backtrace By: Mark (mwoop) 2018-12-21 07:13:17.272-0600 I have a backtrace here unfortunately it includes a couple of names and phone numbers which I cannot send to public. Is there anything special you are looking for which I probably can extract from the files? I have brief.txt, full.txt, locks.txt and thread1.txt This is my very first bug report and I just want to make you aware of this issue. In my case an incoming call is sent into a pretty basic queue (which can be even configured locally and doesn't need to be realtime) : [queue1000] strategy=rrmemory ringinuse=no autopause=no wrapuptime=5 autofill=yes member => SIP/agent1000 member => SIP/agent1001 See dialplan steps above. As soon as the call is sent to a queue member (using the b option to add SIP headers), Asterisk crashes. Let me know if I can extract some worthy information for you from the backtrace files. Any keywords to look for? By: Mark (mwoop) 2018-12-21 07:39:58.256-0600 Ok, I removed phone numbers from the traces manually... By: Joshua C. Colp (jcolp) 2019-01-02 05:51:46.273-0600 Please try the attached patch. It can be applied using: patch -p1 < ASTERISK-26218.diff This should be run from within the source code directory of Asterisk. By: Mark (mwoop) 2019-01-02 06:20:23.003-0600 Happy new year and thanks a lot. Fix is working and bug seems to be resolved. By: Joshua C. Colp (jcolp) 2019-01-02 11:33:55.181-0600 This hasn't been put up for review and inclusion so please do not close it out yet. By: Mark (mwoop) 2019-01-02 11:43:15.651-0600 Sorry for that - as said before: this is my very first bug report ;-) By: Friendly Automation (friendly-automation) 2019-01-02 16:39:22.595-0600 Change 10844 merged by Friendly Automation: app_queue: Fix crash when using 'b' option on non-ringall queue. [https://gerrit.asterisk.org/10844|https://gerrit.asterisk.org/10844] By: Friendly Automation (friendly-automation) 2019-01-03 05:14:07.436-0600 Change 10843 merged by Joshua C. Colp: app_queue: Fix crash when using 'b' option on non-ringall queue. [https://gerrit.asterisk.org/10843|https://gerrit.asterisk.org/10843] | ||